# azure-embedded-sdk-sys

./: .gitignore  Cargo.toml  README.md  build.rs  clangargs_sample.txt  wrapper.h
examples/: mptest.rs
src/: lib.rs
