[package]
name = "azure-embedded-sdk-sys"
version = "0.1.2"
authors = ["Mark Radbourne <markrad@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
bindgen = "0.55.1"
cmake = "0.1.44"
regex = "1"

[dependencies]
